--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,7 @@ a.o-btn {
 
 .c-badge__icon {
 	font-size: 2em;
+	flex: 1 1 auto;
 }
 
 .c-badge__icon:first-child {
@@ -147,6 +148,7 @@ a.o-btn {
 
 .c-badge__text {
 	padding: .5em;
+	flex: 1 1 auto;
 }
 
 /* !== !== !== !== !== !== !== !== !== !== !== !== !== !== !== !==  */
@@ -156,6 +158,7 @@ a.o-btn {
 	padding: .75em;
 	background: #272727;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-around;
 	align-items: center;
 }
